--- a/index.html
+++ b/index.html
@@ -4,12 +4,36 @@
             <meta charset="UTF-8"/>
                 <title>Better Call Abdo</title>
             <meta name="description" content="This is my Portfolio website" />
-        <link rel="stylesheet" href="/Pablo.css">
+        <link rel="stylesheet" href="./Pablo.css">
     </head>
     <body>
+        <audio src="./001.mp3" autoplay> </audio>
         <div class="div1">
                 <header class="h1"><h1> Welcome To My Portfolio Website </h1> </header> 
                     <p class="p1">"I'm Abdo, a Senior Front-end and WordPress Developer."</p>
+        </div>
+        <div id="pph-hireme">
+            <script type="text/javascript">
+                (function(d, s) {
+                    var useSSL = 'https:' == document.location.protocol;
+                    var js, where = d.getElementsByTagName(s)[0],
+                js = d.createElement(s);
+                js.src = (useSSL ? 'https:' : 'http:') +  '//www.peopleperhour.com/hire/459756528/9270925.js?width=245&height=320&orientation=vertical&theme=dark&rnd='+parseInt(Math.random()*10000, 10);
+                try { where.parentNode.insertBefore(js, where); } catch (e) { if (typeof console !== 'undefined' && console.log && e.stack) { console.log(e.stack); } }
+                }(document, 'script'));
+            </script>
+            </div>
+        <div class="wsm">
+            <p class="p2">Why Choose Me?</p>
+        </div> 
+        <div Class="wsmimage"> </div>
+        <div>
+            <ul>
+                <li>Senior WordPress</li>
+                <li>Junior Front-end</li>
+                <li>Responsive expert</li>
+                <li>From El-Sharkia</li>
+            </ul>
         </div>
     </body>
         <Footer>&copy; Copyright 2023 Abdo Pablo</Footer>
