--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="./Pablo.css">
     </head>
     <body>
-        <audio src="./001.mp3" autoplay> </audio>
+        <audio src="./001.mp3" type="audio/mpeg" autoplay> </audio>
         <div class="div1">
                 <header class="h1"><h1> Welcome To My Portfolio Website </h1> </header> 
                     <p class="p1">"I'm Abdo, a Senior Front-end and WordPress Developer."</p>
